# demo

./: package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
tauri-plugin-dxwebview/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
tauri-plugin-dxwebview/android/: build.gradle.kts  local.properties
tauri-plugin-dxwebview/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-dxwebview/android/src/main/java/: Example.kt  ExamplePlugin.kt
tauri-plugin-dxwebview/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-dxwebview/examples/tauri-app/: package.json
tauri-plugin-dxwebview/examples/tauri-app/src/: App.svelte
tauri-plugin-dxwebview/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-dxwebview/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-dxwebview/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-dxwebview/guest-js/: index.ts
tauri-plugin-dxwebview/ios/: Package.swift  README.md
tauri-plugin-dxwebview/ios/Sources/: ExamplePlugin.swift
tauri-plugin-dxwebview/permissions/autogenerated/: reference.md
tauri-plugin-dxwebview/permissions/autogenerated/commands/: close_webview.toml  create_webview.toml
tauri-plugin-dxwebview/permissions/schemas/: schema.json
tauri-plugin-dxwebview/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
